# devterm

./: .gitattributes  .gitignore  Cargo.toml  PLAN.md  README.md  deny.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/devterm-app/: Cargo.toml  build.rs
crates/devterm-app/src/: app.rs  keymap.rs  main.rs  update.rs
crates/devterm-app/src/app/: actions.rs  config_watch.rs  input.rs  pane.rs  present.rs  settings.rs  state.rs  tabbar.rs  view.rs  window.rs
crates/devterm-cli/: Cargo.toml
crates/devterm-cli/src/: main.rs
crates/devterm-config/: Cargo.toml
crates/devterm-config/src/: action.rs  color.rs  cursor.rs  keybinding.rs  lib.rs  shell.rs  theme.rs
crates/devterm-config/src/keybinding/: chord.rs  mod.rs  named.rs  preset.rs
crates/devterm-core/: Cargo.toml
crates/devterm-core/src/: geometry.rs  id.rs  layout.rs  lib.rs
crates/devterm-core/src/layout/: mod.rs  node.rs  tree.rs
crates/devterm-core/tests/: layout_props.rs
crates/devterm-plugin/: Cargo.toml
crates/devterm-plugin/src/: lib.rs
crates/devterm-pty/: Cargo.toml
crates/devterm-pty/src/: lib.rs  pty.rs  shell.rs  spec.rs
crates/devterm-render/: Cargo.toml
crates/devterm-render/src/: atlas.rs  color.rs  font.rs  gpu.rs  lib.rs  renderer.rs
crates/devterm-render/src/renderer/: draw.rs  init.rs
crates/devterm-term/: Cargo.toml
crates/devterm-term/src/: color.rs  lib.rs  palette.rs  resolve.rs  selection.rs  snapshot.rs  term.rs
docs/: M0_INTERFACES.md  M1_PLAN.md  README.md  configuration.md  keybindings.md  usage.md
installer/: devterm.iss
scripts/: make-icon.ps1  release.mjs  set-version.mjs
