[package]
name = "devterm-cli"
description = "The `dt` control CLI: talks to a running DevTerm over a named pipe. (M2)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dt"
path = "src/main.rs"

[dependencies]
# Activated in M2:
# clap.workspace = true
# anyhow.workspace = true
