[package]
name = "devterm-config"
description = "Config schema: load/validate/hot-reload, keymaps, themes, project layouts. (M1)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
devterm-core = { workspace = true, features = ["serde"] }
# Activated in M1/M2:
# serde.workspace = true
# toml.workspace = true
# serde_norway.workspace = true   # project layouts (devterm.yml)
