[package]
name = "devterm-config"
description = "Config schema: load/validate/hot-reload, keymaps, themes, project layouts. (M1)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
devterm-core = { workspace = true, features = ["serde"] }
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# Project layouts (devterm.yml) land in M2:
# serde_norway.workspace = true
