[package]
name = "devterm-plugin"
description = "WASM plugin host (wasmtime): manifest, permissions, event/command API. (M3)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
devterm-core.workspace = true
# Activated in M3:
# wasmtime.workspace = true
# serde.workspace = true
