[package]
name = "devterm-render"
description = "wgpu renderer: cell grid, glyph atlas (swash), cursor, selection, splits, DPI. (M0)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
devterm-core.workspace = true
devterm-term.workspace = true
wgpu.workspace = true
winit.workspace = true
swash.workspace = true
fontdb.workspace = true
pollster.workspace = true
bytemuck.workspace = true
unicode-width.workspace = true
anyhow.workspace = true
log.workspace = true
